# raw-curator

./: .containerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  USER_GUIDE.md  alembic.ini  compose.yaml  pyproject.toml
app/: __init__.py  cli.py  config.py  db.py  models.py
app/api/: main.py
app/api/routes/: _urls.py  cluster.py  decide.py  photo.py  queue.py  submit.py
app/api/static/: index.html
app/clustering/: clip_cluster.py  cluster_job.py  exif_burst.py  phash_dedupe.py  recommend.py
app/decision/: decide_job.py  executor.py  rules.py
app/embedding/: clip.py  faces.py
app/enhancement/: _scunet_arch.py  denoise.py  develop_full.py  downsample.py  enhance_job.py  face_restore.py  pack_tiff.py  tone_balance.py  upsample_final.py  upscale.py
app/enhancement/classical/: __init__.py  color.py  exposure.py  local_contrast.py  sharpen.py  tone_map.py  white_balance.py
app/enhancement/engine/: __init__.py  decision.py  metrics.py  plan.py  runner.py  scoring.py
app/export/: __init__.py  jpeg_job.py  jpeg_writer.py
app/filters/: blur.py  exposure.py  filter_job.py  phash.py
app/ingest/: decode.py  exif.py  hasher.py  ingest_job.py  walker.py
app/preview/: jpeg_writer.py  rawpy_dev.py
app/scoring/: aesthetic.py  iqa.py  score_job.py
app/workers/: gpu_worker.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_add_file_kind.py  0003_add_quality_reports.py
scripts/: download_models.py  end_session.py  host-bootstrap.sh
tests/: conftest.py  test_classical_exposure_tone_map.py  test_clustering.py  test_decision_rules.py  test_decode.py  test_engine_decision.py  test_engine_metrics.py  test_filters.py  test_jpeg_export.py  test_schema.py  test_tone_balance.py
tests/fixtures/: make_burst.py
