[tool.poetry]
name = "raw-curator"
version = "0.1.0"
description = "AI RAW Photo Curation Pipeline (ephemeral single-batch)"
authors = ["Ted Rong <ted_rong@trendmicro.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12"
click = "<8.2"
pydantic = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy = "^2.0"
alembic = "^1.13"
sqlite-vec = "^0.1.6"
numpy = "^1.26"
pillow = "^10.3"
xxhash = "^3.4"
imagehash = "^4.3"
opencv-python-headless = "^4.10"
pyexiftool = "^0.5"
rawpy = "^0.21"
pillow-heif = "^0.18"
tifffile = "^2024.7"
imagecodecs = "^2024.6"
hdbscan = "^0.8"
scikit-learn = "^1.5"
fastapi = "^0.115"
uvicorn = { version = "^0.30", extras = ["standard"] }
httpx = "^0.27"
rich = "^13.7"
tqdm = "^4.66"
huggingface-hub = "^0.24"

torch = { version = "2.4.0", source = "pytorch-cu124" }
torchvision = { version = "0.19.0", source = "pytorch-cu124" }
open-clip-torch = "^2.26"
aesthetic-predictor-v2-5 = ">=2024.12"
pyiqa = "^0.1.11"
insightface = "^0.7.3"
onnxruntime-gpu = "^1.18"
realesrgan = "^0.3"
basicsr = "^1.4"
facexlib = "^0.3"
codeformer-pip = "^0.0.4"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.5"
mypy = "^1.10"

[tool.poetry.scripts]
raw-curator = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires CUDA",
    "real_raw: requires real RAW fixtures in tests/data/",
]
